3.4.3/_sources/gallery/pyplots/dollar_ticks.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/pyplots/dollar_ticks.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_pyplots_dollar_ticks.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_dollar_ticks.py:


============
Dollar Ticks
============

Use a `~.ticker.FormatStrFormatter` to prepend dollar signs on y axis labels.

.. GENERATED FROM PYTHON SOURCE LINES 8-26

.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt

    # Fixing random state for reproducibility
    np.random.seed(19680801)

    fig, ax = plt.subplots()
    ax.plot(100*np.random.rand(20))

    # Use automatic StrMethodFormatter
    ax.yaxis.set_major_formatter('${x:1.2f}')

    ax.yaxis.set_tick_params(which='major', labelcolor='green',
                             labelleft=False, labelright=True)

    plt.show()





.. image:: /gallery/pyplots/images/sphx_glr_dollar_ticks_001.png
    :alt: dollar ticks
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 27-37

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.pyplot.subplots`
   - `matplotlib.axis.Axis.set_major_formatter`
   - `matplotlib.axis.Axis.set_tick_params`
   - `matplotlib.axis.Tick`
   - `matplotlib.ticker.StrMethodFormatter`


.. _sphx_glr_download_gallery_pyplots_dollar_ticks.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: dollar_ticks.py <dollar_ticks.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: dollar_ticks.ipynb <dollar_ticks.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
